--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>I'm a header 1!</h1>
 
         Hello There!!!
-        
+        <img src="https://octodex.github.com/images/vinyltocat.png">
+
     </body>
 </html>
