--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 
         Hello There!!!
         <img src="https://octodex.github.com/images/vinyltocat.png">
+        
+    <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+    </ol>
+
 
     </body>
 </html>
