--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <img src="https://octodex.github.com/images/vinyltocat.png">
         
     <ol>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Ordered list</li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
+    <li><a href="https://www.youtube.com">This is a link to Youtube!</a></li>
+    <li><a href="https://www.facebook.com">This is a link to Facebook!</a></li>
     </ol>
 
 
